terraform/main.tf
variable "aws_access_key_id" {}
variable "aws_secret_access_key" {}

provider "aws" {
  region     = "eu-central-1"
  access_key = var.aws_access_key_id
  secret_key = var.aws_secret_access_key
}

resource "aws_security_group" "web_server_sg" {
  name_prefix = "web-server-sg"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web_server" {
  ami           = "ami-0b0c836a737ee51d7"
  instance_type = "t2.micro"

  # Подключение Security Group
  vpc_security_group_ids = [aws_security_group.web_server_sg.id]

  # Пользовательские данные для запуска
  user_data = <<-EOF
            #!/bin/bash
            sudo apt update -y
            sudo apt install -y nginx
            echo "Hello World" > /var/www/html/index.html
            sudo systemctl status nginx || sudo systemctl restart nginx
            sudo systemctl start nginx
            sudo systemctl enable nginx
            EOF

  timeouts {
    create = "10m"
    delete = "5m"
  }

  tags = {
    Name = "TerraformWebServer"
  }
}

output "public_ip" {
  value = aws_instance.web.public_ip
}
